--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-970.8KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.80MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-5.28MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-272.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-239.7KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-323.2KB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.05MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇨🇳 中国-662.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-597.1KB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.10MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-995.4KB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-729.6KB/s(Youtube:不良林), server: jp03.xniuniu888.xyz, port: 30326, type: vmess, uuid: 1bd166b8-62e5-3ab8-a20e-e045a884807c, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 18443, type: vmess, uuid: 2256dea6-b952-43f7-b8a2-983f766d5836, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
+  - {name: 🇭🇰 香港-3.41MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-597.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-995.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-729.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-597.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-995.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-729.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-597.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-995.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-729.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-729.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.41MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-597.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-995.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-729.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-597.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-995.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-729.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-597.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-995.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-729.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-662.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-597.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-995.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-729.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
